[package]
name = "homily"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.6.1"
chrono = { version = "0.4.13", features = ["serde"] }
crossterm = "0.22"
dirs = "3.0.1"
futures = "0.3.5"
futures-channel = "0.3.5"
futures-core = "0.3.5"
futures-util = "0.3.5"
log = { version = "0.4.11", features = ["std"] }
tuikit = "0.4.5"
openssl-sys = "0.9.63"
reqwest = { version = "0.11", features = ["stream"] }
tokio = { version = "0.2", features = ["full"] }
quick-xml = { version = "0.18", features = [ "serialize" ] }
serde = { version = "1.0", features = [ "derive" ] }
